Fix wrapping for releases/projects

--- a/src/components/projects/styles.module.scss
+++ b/src/components/projects/styles.module.scss
@@ -3,20 +3,20 @@
   padding: 0;
 
   li {
+    align-items: baseline;
     display: flex;
-    margin-bottom: 1rem;
+    flex-wrap: wrap;
+    margin-bottom: 3rem;
 
     time {
       text-transform: uppercase;
-      width: 6rem;
+      width: 8rem;
       padding-right: 1rem;
+      white-space: nowrap;
     }
 
     header {
+      max-width: 400px;
     }
   }
-}
-
-.location {
-  font-size: 0.75rem;
 }
